--- a/其他归类/NAS备忘/1.NAS安装配置说明.md
+++ b/其他归类/NAS备忘/1.NAS安装配置说明.md
@@ -1,3 +1,14 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [安装](#%E5%AE%89%E8%A3%85)
+- [硬盘启动](#%E7%A1%AC%E7%9B%98%E5%90%AF%E5%8A%A8)
+- [证书](#%E8%AF%81%E4%B9%A6)
+- [避坑](#%E9%81%BF%E5%9D%91)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 安装
 
 系统的引导跟系统主文件的版本有联系，基本可以认定是绑定的，不能混用，当前系统（也是当前稳定的最高版本）：
