--- a/前端方向/前端基础/CSS新世界/图像与背景显示.md
+++ b/前端方向/前端基础/CSS新世界/图像与背景显示.md
@@ -1,3 +1,13 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [图像渲染控制](#%E5%9B%BE%E5%83%8F%E6%B8%B2%E6%9F%93%E6%8E%A7%E5%88%B6)
+  - [img 标签的渲染控制](#img-%E6%A0%87%E7%AD%BE%E7%9A%84%E6%B8%B2%E6%9F%93%E6%8E%A7%E5%88%B6)
+    - [关于 cross-fade 的应用（background 多背景混合）](#%E5%85%B3%E4%BA%8E-cross-fade-%E7%9A%84%E5%BA%94%E7%94%A8background-%E5%A4%9A%E8%83%8C%E6%99%AF%E6%B7%B7%E5%90%88)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 # 图像渲染控制
 
 ## img 标签的渲染控制
