--- a/前端方向/前端基础/CSS新世界/文字处理增强.md
+++ b/前端方向/前端基础/CSS新世界/文字处理增强.md
@@ -1,3 +1,19 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [text-shadow 文字阴影](#text-shadow-%E6%96%87%E5%AD%97%E9%98%B4%E5%BD%B1)
+- [text-stroke 描边文字](#text-stroke-%E6%8F%8F%E8%BE%B9%E6%96%87%E5%AD%97)
+- [text-fill-color 文字填充](#text-fill-color-%E6%96%87%E5%AD%97%E5%A1%AB%E5%85%85)
+- [使用 text-emphasis 进行文字强调修饰](#%E4%BD%BF%E7%94%A8-text-emphasis-%E8%BF%9B%E8%A1%8C%E6%96%87%E5%AD%97%E5%BC%BA%E8%B0%83%E4%BF%AE%E9%A5%B0)
+  - [关于 text-emphasis-style 的一些特点](#%E5%85%B3%E4%BA%8E-text-emphasis-style-%E7%9A%84%E4%B8%80%E4%BA%9B%E7%89%B9%E7%82%B9)
+- [文字旋转与方向控制](#%E6%96%87%E5%AD%97%E6%97%8B%E8%BD%AC%E4%B8%8E%E6%96%B9%E5%90%91%E6%8E%A7%E5%88%B6)
+- [文字尺寸、样式控制](#%E6%96%87%E5%AD%97%E5%B0%BA%E5%AF%B8%E6%A0%B7%E5%BC%8F%E6%8E%A7%E5%88%B6)
+  - [文字倾斜](#%E6%96%87%E5%AD%97%E5%80%BE%E6%96%9C)
+  - [数字显示控制（属性：font-variant-numeric）](#%E6%95%B0%E5%AD%97%E6%98%BE%E7%A4%BA%E6%8E%A7%E5%88%B6%E5%B1%9E%E6%80%A7font-variant-numeric)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## text-shadow 文字阴影
 
 - 支持同时设置多个阴影，支持偏移，不支持阴影拓展
