--- a/前端方向/前端基础/CSS新世界/更加丰富的图形处理（遮罩、裁剪、倒影、路径动画）.md
+++ b/前端方向/前端基础/CSS新世界/更加丰富的图形处理（遮罩、裁剪、倒影、路径动画）.md
@@ -1,3 +1,22 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [使用的 CSS 遮罩 （mask）](#%E4%BD%BF%E7%94%A8%E7%9A%84-css-%E9%81%AE%E7%BD%A9-mask)
+  - [相关属性](#%E7%9B%B8%E5%85%B3%E5%B1%9E%E6%80%A7)
+  - [关于 mask-composite](#%E5%85%B3%E4%BA%8E-mask-composite)
+  - [使用遮罩优化 png 图片大小（极限性能场景可以考虑）](#%E4%BD%BF%E7%94%A8%E9%81%AE%E7%BD%A9%E4%BC%98%E5%8C%96-png-%E5%9B%BE%E7%89%87%E5%A4%A7%E5%B0%8F%E6%9E%81%E9%99%90%E6%80%A7%E8%83%BD%E5%9C%BA%E6%99%AF%E5%8F%AF%E4%BB%A5%E8%80%83%E8%99%91)
+- [clip-path](#clip-path)
+  - [资源裁剪](#%E8%B5%84%E6%BA%90%E8%A3%81%E5%89%AA)
+  - [盒子裁剪](#%E7%9B%92%E5%AD%90%E8%A3%81%E5%89%AA)
+  - [基本图形裁剪](#%E5%9F%BA%E6%9C%AC%E5%9B%BE%E5%BD%A2%E8%A3%81%E5%89%AA)
+  - [clip-path 裁剪的一些特点](#clip-path-%E8%A3%81%E5%89%AA%E7%9A%84%E4%B8%80%E4%BA%9B%E7%89%B9%E7%82%B9)
+  - [关于填充模式](#%E5%85%B3%E4%BA%8E%E5%A1%AB%E5%85%85%E6%A8%A1%E5%BC%8F)
+- [倒影效果（-webkit-box-reflect）](#%E5%80%92%E5%BD%B1%E6%95%88%E6%9E%9C-webkit-box-reflect)
+- [简单的路径动画（offset-distance、offset-path）](#%E7%AE%80%E5%8D%95%E7%9A%84%E8%B7%AF%E5%BE%84%E5%8A%A8%E7%94%BBoffset-distanceoffset-path)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 使用的 CSS 遮罩 （mask）
 
 遮罩基本概念：所谓遮罩效果，就是只会显示遮罩图像非透明区域的内容；假设 A 图作为遮罩图片，B 图作为渲染图片，则可以理解为 A 图的非透明区域作为画板区域，B 图则渲染在画板上，透明区域是没有画板的，也就不渲染；因此，遮罩图片必须是支持 Alpha 通道的图片格式，典型的是 png，如果使用 jpg 这类不支持 Alpha 通道的图片，则不会有任何效果；
