--- a/前端方向/前端基础/CSS新世界/渐变语法特点.md
+++ b/前端方向/前端基础/CSS新世界/渐变语法特点.md
@@ -1,3 +1,16 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [线性渐变的一些语法几特性 liner-gradientt](#%E7%BA%BF%E6%80%A7%E6%B8%90%E5%8F%98%E7%9A%84%E4%B8%80%E4%BA%9B%E8%AF%AD%E6%B3%95%E5%87%A0%E7%89%B9%E6%80%A7-liner-gradientt)
+- [径向渐变 radial-gradient](#%E5%BE%84%E5%90%91%E6%B8%90%E5%8F%98-radial-gradient)
+  - [设置径向渐变半径：](#%E8%AE%BE%E7%BD%AE%E5%BE%84%E5%90%91%E6%B8%90%E5%8F%98%E5%8D%8A%E5%BE%84)
+  - [设置渐变中心点的位置](#%E8%AE%BE%E7%BD%AE%E6%B8%90%E5%8F%98%E4%B8%AD%E5%BF%83%E7%82%B9%E7%9A%84%E4%BD%8D%E7%BD%AE)
+  - [设置渐变终止点的位置](#%E8%AE%BE%E7%BD%AE%E6%B8%90%E5%8F%98%E7%BB%88%E6%AD%A2%E7%82%B9%E7%9A%84%E4%BD%8D%E7%BD%AE)
+- [锥形渐变 conic-gradient](#%E9%94%A5%E5%BD%A2%E6%B8%90%E5%8F%98-conic-gradient)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 线性渐变的一些语法几特性 liner-gradientt
 
 - 线性渐变色值断点至少有两个，否则不合法
