--- a/前端方向/前端基础/CSS新世界/用户行为体验增强（滚动）.md
+++ b/前端方向/前端基础/CSS新世界/用户行为体验增强（滚动）.md
@@ -1,3 +1,14 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [滚动](#%E6%BB%9A%E5%8A%A8)
+  - [scroll-snap-type 设置贴合滚动（容器）](#scroll-snap-type-%E8%AE%BE%E7%BD%AE%E8%B4%B4%E5%90%88%E6%BB%9A%E5%8A%A8%E5%AE%B9%E5%99%A8)
+  - [scroll-snap-align 设置贴合滚动（子元素）](#scroll-snap-align-%E8%AE%BE%E7%BD%AE%E8%B4%B4%E5%90%88%E6%BB%9A%E5%8A%A8%E5%AD%90%E5%85%83%E7%B4%A0)
+- [CSS Scrollbars 与滚动条样式的自定义（CSS 规范，非 webkit 私有,，目前仅 Firefox 支持）](#css-scrollbars-%E4%B8%8E%E6%BB%9A%E5%8A%A8%E6%9D%A1%E6%A0%B7%E5%BC%8F%E7%9A%84%E8%87%AA%E5%AE%9A%E4%B9%89css-%E8%A7%84%E8%8C%83%E9%9D%9E-webkit-%E7%A7%81%E6%9C%89%E7%9B%AE%E5%89%8D%E4%BB%85-firefox-%E6%94%AF%E6%8C%81)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 滚动
 
 > 平滑滚动
