--- a/前端方向/前端基础/CSS新世界/用户行为体验增强（点击、拉伸、输入、选择、打印、性能增强）.md
+++ b/前端方向/前端基础/CSS新世界/用户行为体验增强（点击、拉伸、输入、选择、打印、性能增强）.md
@@ -1,3 +1,17 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [你不知道的 pointer-events:none 特点](#%E4%BD%A0%E4%B8%8D%E7%9F%A5%E9%81%93%E7%9A%84-pointer-eventsnone-%E7%89%B9%E7%82%B9)
+- [触摸行为](#%E8%A7%A6%E6%91%B8%E8%A1%8C%E4%B8%BA)
+- [拉伸行为](#%E6%8B%89%E4%BC%B8%E8%A1%8C%E4%B8%BA)
+- [输入行为](#%E8%BE%93%E5%85%A5%E8%A1%8C%E4%B8%BA)
+- [选择行为](#%E9%80%89%E6%8B%A9%E8%A1%8C%E4%B8%BA)
+- [打印行为](#%E6%89%93%E5%8D%B0%E8%A1%8C%E4%B8%BA)
+- [性能增强](#%E6%80%A7%E8%83%BD%E5%A2%9E%E5%BC%BA)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 你不知道的 pointer-events:none 特点
 
 - 不要用这个样式去禁用某些元素（比如 Button）：并不能阻止键盘行为，按钮元素依然可以通过 Tab 键被 focus 聚焦，并且可以在 focus 聚焦状态下通过 Enter 键触发点击事件，也就是设置 pointer-events: none 声明实现的禁用效果只是部分禁用，并不是真正意义上的禁用
