--- a/后端方向/Linux/磁盘管理/4.为系统增加虚拟内存.md
+++ b/后端方向/Linux/磁盘管理/4.为系统增加虚拟内存.md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [为内存紧张的机器增加虚拟内存](#%E4%B8%BA%E5%86%85%E5%AD%98%E7%B4%A7%E5%BC%A0%E7%9A%84%E6%9C%BA%E5%99%A8%E5%A2%9E%E5%8A%A0%E8%99%9A%E6%8B%9F%E5%86%85%E5%AD%98)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 为内存紧张的机器增加虚拟内存
 
 1、创建虚拟内存文件，并格式化：
