--- a/数学/高等数学/2.向量乘法.md
+++ b/数学/高等数学/2.向量乘法.md
@@ -1,3 +1,12 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [点乘](#%E7%82%B9%E4%B9%98)
+- [叉乘](#%E5%8F%89%E4%B9%98)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 点乘
 
 假设，现在有两个 N 维向量 a 和 b，`a = [a1, a2, ...an]，b = [b1, b2, ...bn]`，那向量的点积公式如下：
