--- a/奇淫巧技/移动端/1.横竖屏判断.md
+++ b/奇淫巧技/移动端/1.横竖屏判断.md
@@ -1,3 +1,13 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [JS 环境](#js-%E7%8E%AF%E5%A2%83)
+- [CSS 环境](#css-%E7%8E%AF%E5%A2%83)
+- [判断边界](#%E5%88%A4%E6%96%AD%E8%BE%B9%E7%95%8C)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## JS 环境
 
 _Tips：不要使用 window.orientation 属性，该属性已经废弃了_
