--- a/数学/高等数学/1.三角函数.md
+++ b/数学/高等数学/1.三角函数.md
@@ -1,3 +1,12 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [常用三角函数](#%E5%B8%B8%E7%94%A8%E4%B8%89%E8%A7%92%E5%87%BD%E6%95%B0)
+- [反三角函数](#%E5%8F%8D%E4%B8%89%E8%A7%92%E5%87%BD%E6%95%B0)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 常用三角函数
 
 - sin 正弦 (对边 / 斜边)
