--- a/瞎看看/关于色相.md
+++ b/瞎看看/关于色相.md
@@ -1,3 +1,12 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [简述](#%E7%AE%80%E8%BF%B0)
+- [色相渐变快捷 CSS](#%E8%89%B2%E7%9B%B8%E6%B8%90%E5%8F%98%E5%BF%AB%E6%8D%B7-css)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 简述
 
 色相指的是色彩的外相，是在不同波长的光照射下，人眼所感觉不同的颜色，如红色、黄色、蓝色等。
