feat：兼容github的书写方式

--- a/数学/LaTex符号语法/1.LaTex基础语法.md
+++ b/数学/LaTex符号语法/1.LaTex基础语法.md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [基础语法](#%E5%9F%BA%E7%A1%80%E8%AF%AD%E6%B3%95)
 - [常用元字符](#%E5%B8%B8%E7%94%A8%E5%85%83%E5%AD%97%E7%AC%A6)
@@ -39,26 +40,26 @@ $f(x)=\sin x$
 ### 常用函数
 
 ```latex
-$\tan$、$\sin$、$\cos$、$\lg$、$\arcsin$、$\arctan$、$\min$、$\max$、$\exp$、$\log$
+$\tan$ $\sin$ $\cos$ $\lg$ $\arcsin$ $\arctan$ $\min$ $\max$ $\exp$ $\log$
 ```
 
-效果：$\tan$、$\sin$、$\cos$、$\lg$、$\arcsin$、$\arctan$、$\min$、$\max$、$\exp$、$\log$
+效果：$\tan$ $\sin$ $\cos$ $\lg$ $\arcsin$ $\arctan$ $\min$ $\max$ $\exp$ $\log$
 
 ### 常用运算符
 
 ```latex
-$+$、$-$、$=$、$>$、$<$、$\times$、$\div$、$\equiv$、$\leq$、$\geq$、$\neq$
+$+$ $-$ $=$ $>$ $<$ $\times$ $\div$ $\equiv$ $\leq$ $\geq$ $\neq$
 ```
 
-效果：$+$、$-$、$=$、$>$、$<$、$\times$、$\div$、$\equiv$、$\leq$、$\geq$、$\neq$
+效果：$+$ $-$ $=$ $>$ $<$ $\times$ $\div$ $\equiv$ $\leq$ $\geq$ $\neq$
 
 ### 常用集合符号
 
 ```latex
-$\ni$、$\subset$、$\subseteq$、$\supset$、$\supseteq$、$\N$、$\Z$、$\R$、$\R$、$\infty$
+$\ni$ $\subset$ $\subseteq$ $\supset$ $\supseteq$ $\N$ $\Z$ $\R$ $\R$ $\infty$
 ```
 
-效果：$\ni$、$\subset$、$\subseteq$、$\supset$、$\supseteq$、$\N$、$\Z$、$\R$、$\R$、$\infty$
+效果：$\ni$ $\subset$ $\subseteq$ $\supset$ $\supseteq$ $\N$ $\Z$ $\R$ $\R$ $\infty$
 
 ## 简单样例
 
