--- a/数学/LaTex符号语法/1.LaTex基础语法.md
+++ b/数学/LaTex符号语法/1.LaTex基础语法.md
@@ -26,6 +26,8 @@
 - 内联语法：$expression$ (内联显示，不单独占据一行)
 - 块级语法：$$expression$$ （独占一行，并且居中）
 
+**重点说明：内联语法书写时，$表达式外侧必须有空格，否则 github 不能正确识别**
+
 元字符与其他自定义字符或其他元字符之间需要有明确的边界（反斜线或者空格，视情况而定），下面是以简单的例子：
 
 ```latex
@@ -33,7 +35,7 @@
 $f(x)=\sin x$
 ```
 
-效果：$f(x)=\sin x$
+效果： $f(x)=\sin x$
 
 ## 常用元字符
 
@@ -43,7 +45,7 @@ $f(x)=\sin x$
 $\tan$ $\sin$ $\cos$ $\lg$ $\arcsin$ $\arctan$ $\min$ $\max$ $\exp$ $\log$
 ```
 
-效果：$\tan$ $\sin$ $\cos$ $\lg$ $\arcsin$ $\arctan$ $\min$ $\max$ $\exp$ $\log$
+效果： $\tan$ $\sin$ $\cos$ $\lg$ $\arcsin$ $\arctan$ $\min$ $\max$ $\exp$ $\log$
 
 ### 常用运算符
 
@@ -51,7 +53,7 @@ $\tan$ $\sin$ $\cos$ $\lg$ $\arcsin$ $\arctan$ $\min$ $\max$ $\exp$ $\log$
 $+$ $-$ $=$ $>$ $<$ $\times$ $\div$ $\equiv$ $\leq$ $\geq$ $\neq$
 ```
 
-效果：$+$ $-$ $=$ $>$ $<$ $\times$ $\div$ $\equiv$ $\leq$ $\geq$ $\neq$
+效果： $+$ $-$ $=$ $>$ $<$ $\times$ $\div$ $\equiv$ $\leq$ $\geq$ $\neq$
 
 ### 常用集合符号
 
@@ -59,7 +61,7 @@ $+$ $-$ $=$ $>$ $<$ $\times$ $\div$ $\equiv$ $\leq$ $\geq$ $\neq$
 $\ni$ $\subset$ $\subseteq$ $\supset$ $\supseteq$ $\N$ $\Z$ $\R$ $\R$ $\infty$
 ```
 
-效果：$\ni$ $\subset$ $\subseteq$ $\supset$ $\supseteq$ $\N$ $\Z$ $\R$ $\R$ $\infty$
+效果： $\ni$ $\subset$ $\subseteq$ $\supset$ $\supseteq$ $\N$ $\Z$ $\R$ $\R$ $\infty$
 
 ## 简单样例
 
