--- a/数学/高等数学/1.三角函数与反三角函数.md
+++ b/数学/高等数学/1.三角函数与反三角函数.md
@@ -5,6 +5,9 @@
 
 - [常用三角函数](#常用三角函数)
 - [反三角函数](#反三角函数)
+- [常用公式](#常用公式)
+- [积化和差](#积化和差)
+- [和差化积](#和差化积)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -37,3 +40,21 @@
 Tips1：反函数定义在某些三角函数上只适用于某一区段，因为三角函数为周期函数，根据反函数定义，三角函数的反函数在整个定义域上可能不满足函数定义条件，因此只取部分函数图像
 
 Tips2：函数与其反函数图像参考 $f(x) = x$ 对称
+
+## 常用公式
+
+$\cos{(\alpha + \beta)} = \cos(\alpha)\cos(\beta) - \sin(\alpha)\sin(\beta)$  
+$\cos{(\alpha - \beta)} = \cos(\alpha)\cos(\beta) + \sin(\alpha)\sin(\beta)$  
+$\sin{(\alpha \pm \beta)} = \sin(\alpha)\cos(\beta) \pm \cos(\alpha)\sin(\beta)$
+
+## 积化和差
+
+$\sin(\alpha)\cos(\beta) = \frac{1}{2}(\sin{(\alpha + \beta)} + \sin{(\alpha - \beta)})$  
+$\cos(\alpha)\cos(\beta) = \frac{1}{2}(\cos{(\alpha + \beta)} + \cos{(\alpha - \beta)})$  
+$\sin(\alpha)\sin(\beta) = -\frac{1}{2}(\cos{(\alpha + \beta)} - \cos{(\alpha - \beta)})$
+
+## 和差化积
+
+$\sin(\alpha) + \sin(\beta) = 2\sin\frac{\alpha+\beta}{2}\cos\frac{\alpha-\beta}{2}$  
+$\cos(\alpha) + \cos(\beta) = 2\cos\frac{\alpha+\beta}{2}\cos\frac{\alpha-\beta}{2}$  
+$\cos(\alpha) - \cos(\beta) = -2\sin\frac{\alpha+\beta}{2}\sin\frac{\alpha-\beta}{2}$
