--- a/数学/高等数学/5.极限运算法则与两个重要极限.md
+++ b/数学/高等数学/5.极限运算法则与两个重要极限.md
@@ -51,3 +51,7 @@ $$\lim\limits_{x \to \infin}{(1+\frac{1}{x})^x} = e$$
 $\lim\limits_{x \to 0}\frac{\sin x}{x^2+2x} \longrightarrow \lim\limits_{x \to 0}\frac{ x}{x^2+2x} \longrightarrow \frac{1}{2}$
 
 **重点：如果分子或分母的构成存在乘法以外的运算法则，则不能随意替换**
+
+## 常用等价无穷小
+
+<img src="./images/../img/常用等价无穷小.jpg"  style="width:600px;"/>
