feat：常用函数求导与反函数求导

--- a/数学/高等数学/7.常用求导法则.md
+++ b/数学/高等数学/7.常用求导法则.md
@@ -1,3 +1,12 @@
+## 求导运算法则
+
+$(u+v)^{'} = u^{'} + v^{'}$  
+$(u-v)^{'} = u^{'} - v^{'}$  
+$(uv)^{'} = u^{'}*v + u*v^{'}$  
+$(\frac{u}{v})^{'} = \frac{u^{'}*v - u*v^{'}}{v^2}$
+
+Tips：如果出现多个因数连续相乘求导，依次用乘法展开就行了，最终结果： $(xyz)^{'} = x^{'}yz + xy^{'}z + xyz^{'}$
+
 ## 常用求导法则
 
 **Tips：所有的求导法则，全都是通过导数定义进行求解的**
@@ -10,3 +19,22 @@
 - $f(x) = e^x$ 则 $f(x)^{'} = e^x$
 - $f(x) = \log_a x$ 则 $f(x)^{'} = \frac{1}{x\ln a}$
 - $f(x) = \ln x$ 则 $f(x)^{'} = \frac{1}{x}$
+
+## 三角函数求导速查表
+
+| 正函数                              | 余函数                               |
+| ----------------------------------- | ------------------------------------ |
+| 正弦 $(\sin x)^{'} = \cos x$        | 余弦 $(\cos x)^{'} = -\sin x$        |
+| 正切 $(\tan x)^{'} = (\sec x)^2$    | 余切 $(\cot x)^{'} = -(\csc x)^2$    |
+| 正割 $(\sec x)^{'} = \sec x*\tan x$ | 余割 $(\csc x)^{'} = -\csc x*\cot x$ |
+
+_Tips: 正割、余割的定义 $\sec x = \frac{1}{\cos x}$ , $\csc x = \frac{1}{\sin x}$_
+
+## 反三角函数求导速查
+
+| 反函数求导公式                               |
+| -------------------------------------------- |
+| $(\arcsin x)^{'} = \frac{1}{\sqrt{1-x^2}}$   |
+| $(\arccos x)^{'} = - \frac{1}{\sqrt{1-x^2}}$ |
+| $(\arctan x)^{'} = \frac{1}{1+x^2}$          |
+| $(\arccos x)^{'} = - \frac{1}{1+x^2}$        |
