--- a/数学/LaTex符号语法/1.LaTex基础语法.md
+++ b/数学/LaTex符号语法/1.LaTex基础语法.md
@@ -145,6 +145,20 @@ $\frac{n!}{k!(n-k)!} = \binom{n}{k}$
 
 $\frac{n!}{k!(n-k)!} = \binom{n}{k}$
 
+### 组合输出
+
+$\tbinom{n}{r}$
+
+$n \choose r$
+
+$C_r^n$
+
+```latex
+$\tbinom{n}{r}$
+$n \choose r$
+$C_n^r$
+```
+
 ### 矩阵输出
 
 ```latex
