feat：隐函数求导法、对数运算法则

--- a/其他归类/NAS备忘/3.套件中心相关问题.md
+++ b/其他归类/NAS备忘/3.套件中心相关问题.md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [添加套件来源报错](#%E6%B7%BB%E5%8A%A0%E5%A5%97%E4%BB%B6%E6%9D%A5%E6%BA%90%E6%8A%A5%E9%94%99)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 添加套件来源报错
 
 安装好系统之后，添加套件源失败，一般来说就是证书过期的问题，只需要更新群晖的系统根证书即可解决：
