--- a/数学/高等数学/3.反函数.md
+++ b/数学/高等数学/3.反函数.md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [反函数](#%E5%8F%8D%E5%87%BD%E6%95%B0)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 反函数
 
 将原函数的定义域与值域互换，如果仍然满足单射函数定义规则，则互换定义域与值域后的函数称为原函数的反函数
