--- a/数学/高等数学/6.导数定义.md
+++ b/数学/高等数学/6.导数定义.md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [导数的定义](#%E5%AF%BC%E6%95%B0%E7%9A%84%E5%AE%9A%E4%B9%89)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 导数的定义
 
 下面是导数的定义，前提是这个极限必须存在，则这个极限就是该函数的导数：
