--- a/数学/高等数学/8.反函数求导.md
+++ b/数学/高等数学/8.反函数求导.md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [反函数求导](#%E5%8F%8D%E5%87%BD%E6%95%B0%E6%B1%82%E5%AF%BC)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 反函数求导
 
 定理： $x = f(y)$ 在 $I_y$ 内单调可导， $f(y)^{'} \neq 0$ ， 反函数 $y = f^{-1}(x)$ 求导：
