--- a/数学/高等数学/9.高阶导数.md
+++ b/数学/高等数学/9.高阶导数.md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [常用高阶导数公式](#%E5%B8%B8%E7%94%A8%E9%AB%98%E9%98%B6%E5%AF%BC%E6%95%B0%E5%85%AC%E5%BC%8F)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 常用高阶导数公式
 
 - $y = \sin x$ 的 n 阶导： $y^{(n)} = \sin {(x + n * \frac{\pi}{2})}$
