--- a/数学/LaTex符号语法/1.LaTex基础语法.md
+++ b/数学/LaTex符号语法/1.LaTex基础语法.md
@@ -1,8 +1,6 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 
-**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
-
 - [基础语法](#%E5%9F%BA%E7%A1%80%E8%AF%AD%E6%B3%95)
 - [常用元字符](#%E5%B8%B8%E7%94%A8%E5%85%83%E5%AD%97%E7%AC%A6)
   - [常用函数](#%E5%B8%B8%E7%94%A8%E5%87%BD%E6%95%B0)
@@ -10,12 +8,14 @@
   - [常用集合符号](#%E5%B8%B8%E7%94%A8%E9%9B%86%E5%90%88%E7%AC%A6%E5%8F%B7)
 - [简单样例](#%E7%AE%80%E5%8D%95%E6%A0%B7%E4%BE%8B)
   - [指数输出](#%E6%8C%87%E6%95%B0%E8%BE%93%E5%87%BA)
+  - [对数输出](#%E5%AF%B9%E6%95%B0%E8%BE%93%E5%87%BA)
   - [n 次方根输出](#n-%E6%AC%A1%E6%96%B9%E6%A0%B9%E8%BE%93%E5%87%BA)
   - [三角公式](#%E4%B8%89%E8%A7%92%E5%85%AC%E5%BC%8F)
   - [输出分数](#%E8%BE%93%E5%87%BA%E5%88%86%E6%95%B0)
   - [求和输出](#%E6%B1%82%E5%92%8C%E8%BE%93%E5%87%BA)
   - [极限输出](#%E6%9E%81%E9%99%90%E8%BE%93%E5%87%BA)
   - [阶乘输出](#%E9%98%B6%E4%B9%98%E8%BE%93%E5%87%BA)
+  - [组合输出](#%E7%BB%84%E5%90%88%E8%BE%93%E5%87%BA)
   - [矩阵输出](#%E7%9F%A9%E9%98%B5%E8%BE%93%E5%87%BA)
   - [复杂的分段函数](#%E5%A4%8D%E6%9D%82%E7%9A%84%E5%88%86%E6%AE%B5%E5%87%BD%E6%95%B0)
 
