--- a/数学/高等数学/1.三角函数与反三角函数.md
+++ b/数学/高等数学/1.三角函数与反三角函数.md
@@ -1,13 +1,11 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 
-**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
-
-- [常用三角函数](#常用三角函数)
-- [反三角函数](#反三角函数)
-- [常用公式](#常用公式)
-- [积化和差](#积化和差)
-- [和差化积](#和差化积)
+- [常用三角函数](#%E5%B8%B8%E7%94%A8%E4%B8%89%E8%A7%92%E5%87%BD%E6%95%B0)
+- [反三角函数](#%E5%8F%8D%E4%B8%89%E8%A7%92%E5%87%BD%E6%95%B0)
+- [常用公式](#%E5%B8%B8%E7%94%A8%E5%85%AC%E5%BC%8F)
+- [积化和差](#%E7%A7%AF%E5%8C%96%E5%92%8C%E5%B7%AE)
+- [和差化积](#%E5%92%8C%E5%B7%AE%E5%8C%96%E7%A7%AF)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
