--- a/数学/高等数学/4.初等函数.md
+++ b/数学/高等数学/4.初等函数.md
@@ -1,3 +1,13 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [常用初等函数复习](#%E5%B8%B8%E7%94%A8%E5%88%9D%E7%AD%89%E5%87%BD%E6%95%B0%E5%A4%8D%E4%B9%A0)
+  - [指数函数](#%E6%8C%87%E6%95%B0%E5%87%BD%E6%95%B0)
+  - [对数函数](#%E5%AF%B9%E6%95%B0%E5%87%BD%E6%95%B0)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 常用初等函数复习
 
 ### 指数函数
