--- a/数学/高等数学/5.极限运算法则与两个重要极限.md
+++ b/数学/高等数学/5.极限运算法则与两个重要极限.md
@@ -1,3 +1,16 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [极限运算法则](#%E6%9E%81%E9%99%90%E8%BF%90%E7%AE%97%E6%B3%95%E5%88%99)
+- [极限存在准则](#%E6%9E%81%E9%99%90%E5%AD%98%E5%9C%A8%E5%87%86%E5%88%99)
+- [两个重要极限](#%E4%B8%A4%E4%B8%AA%E9%87%8D%E8%A6%81%E6%9E%81%E9%99%90)
+- [等价无穷小](#%E7%AD%89%E4%BB%B7%E6%97%A0%E7%A9%B7%E5%B0%8F)
+- [等价无穷小替换的适用范围](#%E7%AD%89%E4%BB%B7%E6%97%A0%E7%A9%B7%E5%B0%8F%E6%9B%BF%E6%8D%A2%E7%9A%84%E9%80%82%E7%94%A8%E8%8C%83%E5%9B%B4)
+- [常用等价无穷小](#%E5%B8%B8%E7%94%A8%E7%AD%89%E4%BB%B7%E6%97%A0%E7%A9%B7%E5%B0%8F)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 极限运算法则
 
 1. 有界数与无穷小的乘积是无穷小，例： $\lim\limits_{x\to0} \sin_{\frac{1}{x}}\times x$
