--- a/数学/高等数学/7.常用求导法则.md
+++ b/数学/高等数学/7.常用求导法则.md
@@ -1,3 +1,14 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [求导运算法则](#%E6%B1%82%E5%AF%BC%E8%BF%90%E7%AE%97%E6%B3%95%E5%88%99)
+- [常用求导法则](#%E5%B8%B8%E7%94%A8%E6%B1%82%E5%AF%BC%E6%B3%95%E5%88%99)
+- [三角函数求导速查表](#%E4%B8%89%E8%A7%92%E5%87%BD%E6%95%B0%E6%B1%82%E5%AF%BC%E9%80%9F%E6%9F%A5%E8%A1%A8)
+- [反三角函数求导速查](#%E5%8F%8D%E4%B8%89%E8%A7%92%E5%87%BD%E6%95%B0%E6%B1%82%E5%AF%BC%E9%80%9F%E6%9F%A5)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 求导运算法则
 
 $(u+v)^{'} = u^{'} + v^{'}$  
