feat：柯西中值定理

--- a/数学/高等数学/12.微分中值定理.md
+++ b/数学/高等数学/12.微分中值定理.md
@@ -24,3 +24,13 @@ $f(x)$ 在 $x_0$ 的邻域 $\cup(x_0)$ 内有定义，在 $x_0$ 处可导，若 
 结论： $(a,b)$ 至少有一点 $\xi$ 使得 $f(b) - f(a) = f'(\xi)(b-a)$
 
 ## 柯西中值定理
+
+若函数 $f(x)$ 与 $F(x)$ 满足条件：
+
+- 在 $[a,b]$ 上连续
+- 在 $(a,b)$ 上可导
+- $\forall x \in (a,b) , F'(x) \neq 0$
+
+结论：至少存在一点 $\xi$ 使得下面的式子成立
+
+$$\frac{f'(\xi)}{F'{(\xi)}} = \frac{f(b) - f(a)}{F(b) - F(a)}$$
