feat：柯西中值定理说明

--- a/数学/高等数学/12.微分中值定理.md
+++ b/数学/高等数学/12.微分中值定理.md
@@ -34,3 +34,7 @@ $f(x)$ 在 $x_0$ 的邻域 $\cup(x_0)$ 内有定义，在 $x_0$ 处可导，若 
 结论：至少存在一点 $\xi$ 使得下面的式子成立
 
 $$\frac{f'(\xi)}{F'{(\xi)}} = \frac{f(b) - f(a)}{F(b) - F(a)}$$
+
+> 说明：其几何意义为：用参数方程表示的曲线上至少有一点，它的切线平行于两端点所在的弦。但柯西定理不能表明在任何情况下不同的两点(f(a),F(a))和(F(b),F(b))都存在切线，因为可能存在一些 c 值使 f′(c) = g′(c) = 0,换句话说取某个值时位于曲线的驻点;在这些点处，曲线根本没有切线。
+
+_Tips：柯西中值定理可以用来证明洛必达法则_
