feat：docker容器自动重新启动

--- a/容器技术/Docker/1.Docker[基础命令].md
+++ b/容器技术/Docker/1.Docker[基础命令].md
@@ -50,6 +50,7 @@ service docker start
 - 重启 Docker 服务：`systemctl restart docker`
 - 拉取镜像：`docker pull xxx镜像`
 - 拉取镜像（指定目标平台，此处指定拉取 arm64/v8 平台的镜像，有的时候镜像自动判定平台并不准确）：`docker pull xxx镜像 --platform=linux/arm64/v8`
+- 更新容器设置：docker update --restart=always sockd  #设置已经启动的容器自动重新启动
 
 解释：
 
