--- a/数学/高等数学/001.三角函数与反三角函数.md
+++ b/数学/高等数学/001.三角函数与反三角函数.md
@@ -39,7 +39,57 @@ Tips1：反函数定义在某些三角函数上只适用于某一区段，因为
 
 Tips2：函数与其反函数图像参考 $f(x) = x$ 对称
 
-## 常用公式
+## 同角三角函数
+
+### 倒数关系
+
+$$\cot\alpha = \frac{\sec\alpha}{\tan\alpha} = \frac{\csc\alpha}{\cos\alpha} = \frac{1}{\sin\alpha}$$
+
+### 平方关系
+
+$$\sin^2\alpha + \cos^2\alpha = \tan^2\alpha + 1 = \sec^2\alpha\cot^2\alpha +1 = \csc^2\alpha$$
+
+### 商的关系
+
+$$ \tan\alpha = \frac{\sin\alpha}{\cos\alpha} = \frac{\sec\alpha}{\csc\alpha}$$
+
+## 诱导公式（周期、奇偶、对称）
+
+### 周期性
+
+$\sin(\alpha + k \cdot 2\pi) = \sin\alpha$
+
+$\cos(\alpha + k \cdot 2\pi) = \cos\alpha$
+
+$\tan(\alpha + k \cdot \pi) = \tan\alpha$
+
+### 奇偶性
+
+$\sin(-\alpha) = -\sin\alpha$
+
+$\cos(-\alpha) = \cos\alpha$
+
+$\tan(-\alpha) = -\tan\alpha$
+
+### 对称性
+
+$\sin(\pi - \alpha) = \sin\alpha$
+
+$\cos(\pi - \alpha) = -\cos\alpha$
+
+$\tan(\pi - \alpha) = -\tan\alpha$
+
+$\sin(\pi + \alpha) = -\sin\alpha$
+
+$\cos(\pi + \alpha) = -\cos\alpha$
+
+$\tan(\pi + \alpha) = \tan\alpha$
+
+稍微高级亿点点的周期函数公式：
+
+$
+
+## 和差角公式
 
 $\cos{(\alpha + \beta)} = \cos(\alpha)\cos(\beta) - \sin(\alpha)\sin(\beta)$  
 $\cos{(\alpha - \beta)} = \cos(\alpha)\cos(\beta) + \sin(\alpha)\sin(\beta)$  
@@ -56,3 +106,11 @@ $\sin(\alpha)\sin(\beta) = -\frac{1}{2}(\cos{(\alpha + \beta)} - \cos{(\alpha - 
 $\sin(\alpha) + \sin(\beta) = 2\sin\frac{\alpha+\beta}{2}\cos\frac{\alpha-\beta}{2}$  
 $\cos(\alpha) + \cos(\beta) = 2\cos\frac{\alpha+\beta}{2}\cos\frac{\alpha-\beta}{2}$  
 $\cos(\alpha) - \cos(\beta) = -2\sin\frac{\alpha+\beta}{2}\sin\frac{\alpha-\beta}{2}$
+
+## 倍角公式
+
+$\sin(2x) = 2\sin(x)\cos(x)$
+
+## 半角公式
+
+$\sin^2(x) + \cos^2(x) = 1$
