--- a/数学/高等数学/001.三角函数与反三角函数.md
+++ b/数学/高等数学/001.三角函数与反三角函数.md
@@ -87,30 +87,82 @@ $\tan(\pi + \alpha) = \tan\alpha$
 
 稍微高级亿点点的周期函数公式：
 
-$
+$\sin(\frac{\pi}{2}-\alpha) = \cos \alpha$
+
+$\sin(\frac{\pi}{2}+\alpha) = \cos \alpha$
+
+$\cos(\frac{\pi}{2}-\alpha) = \sin \alpha$
+
+$\cos(\frac{\pi}{2}+\alpha) = -\sin \alpha$
+
+$\tan(\frac{\pi}{2}-\alpha) = \cot \alpha$
+
+$\tan(\frac{\pi}{2}+\alpha) = -\cot \alpha$
+
+$\sin(\frac{3\pi}{2} + \alpha) = -\cos\alpha$
+
+$\cos(\frac{3\pi}{2} + \alpha) = \sin\alpha$
 
 ## 和差角公式
 
-$\cos{(\alpha + \beta)} = \cos(\alpha)\cos(\beta) - \sin(\alpha)\sin(\beta)$  
-$\cos{(\alpha - \beta)} = \cos(\alpha)\cos(\beta) + \sin(\alpha)\sin(\beta)$  
 $\sin{(\alpha \pm \beta)} = \sin(\alpha)\cos(\beta) \pm \cos(\alpha)\sin(\beta)$
+
+$\cos{(\alpha + \beta)} = \cos(\alpha)\cos(\beta) - \sin(\alpha)\sin(\beta)$
+
+$\cos{(\alpha - \beta)} = \cos(\alpha)\cos(\beta) + \sin(\alpha)\sin(\beta)$
+
+$\tan{(\alpha \pm \beta)} = \frac{\tan(\alpha) \pm \tan(\beta)}{1 \mp \tan(\alpha)\tan(\beta)}$
 
 ## 积化和差
 
-$\sin(\alpha)\cos(\beta) = \frac{1}{2}(\sin{(\alpha + \beta)} + \sin{(\alpha - \beta)})$  
-$\cos(\alpha)\cos(\beta) = \frac{1}{2}(\cos{(\alpha + \beta)} + \cos{(\alpha - \beta)})$  
+$\sin(\alpha)\cos(\beta) = \frac{1}{2}(\sin{(\alpha + \beta)} + \sin{(\alpha - \beta)})$
+
+$\cos(\alpha)\cos(\beta) = \frac{1}{2}(\cos{(\alpha + \beta)} + \cos{(\alpha - \beta)})$
+
 $\sin(\alpha)\sin(\beta) = -\frac{1}{2}(\cos{(\alpha + \beta)} - \cos{(\alpha - \beta)})$
 
 ## 和差化积
 
-$\sin(\alpha) + \sin(\beta) = 2\sin\frac{\alpha+\beta}{2}\cos\frac{\alpha-\beta}{2}$  
-$\cos(\alpha) + \cos(\beta) = 2\cos\frac{\alpha+\beta}{2}\cos\frac{\alpha-\beta}{2}$  
+$\sin(\alpha) + \sin(\beta) = 2\sin\frac{\alpha+\beta}{2}\cos\frac{\alpha-\beta}{2}$
+
+$\sin(\alpha) - \sin(\beta) = 2\sin\frac{\alpha-\beta}{2}\cos\frac{\alpha+\beta}{2}$
+
+$\cos(\alpha) + \cos(\beta) = 2\cos\frac{\alpha+\beta}{2}\cos\frac{\alpha-\beta}{2}$
+
 $\cos(\alpha) - \cos(\beta) = -2\sin\frac{\alpha+\beta}{2}\sin\frac{\alpha-\beta}{2}$
 
-## 倍角公式
+$\tan(\alpha) \pm \tan(\beta) = \frac{\sin\alpha}{\cos\alpha} \pm \frac{\sin\beta}{\cos\beta} = \frac{\sin(\alpha \pm \beta)}{\cos\alpha\cos\beta}$
+
+## 二倍角公式
 
 $\sin(2x) = 2\sin(x)\cos(x)$
 
+$\cos2\alpha = \cos^2\alpha - \sin^2\alpha = 2\cos^2\alpha - 1 = 1 - 2\sin^2\alpha$
+
+$\tan2\alpha = \frac{2\tan\alpha}{1 - \tan^2\alpha}$
+
+## 降幂公式
+
+$\sin^2\alpha = \frac{1 - \cos2\alpha}{2}$
+
+$\cos^2\alpha = \frac{1 + \cos2\alpha}{2}$
+
 ## 半角公式
 
-$\sin^2(x) + \cos^2(x) = 1$
+$\sin\frac{\alpha}{2} = \pm \sqrt{\frac{1 - \cos\alpha}{2}}$
+
+$\cos\frac{\alpha}{2} = \pm \sqrt{\frac{1 + \cos\alpha}{2}}$
+
+$\tan\frac{\alpha}{2} = \pm \sqrt{\frac{1 - \cos\alpha}{1 + \cos\alpha}}$
+
+$\tan\frac{\alpha}{2} = \frac{1-\cos\alpha}{\sin\alpha} = \frac{\sin\alpha}{1+\cos\alpha}$
+
+## 辅助角公式
+
+$a\sin\alpha \pm b\cos\alpha = \sqrt{a^2 + b^2}\sin(\alpha \pm \phi)$
+
+其中 $\phi = \arctan\frac{b}{a} , a \neq 0$
+
+$a\cos\alpha \pm b\sin\alpha = \sqrt{a^2 + b^2}\cos(\alpha \mp \phi)$
+
+其中 $\phi = \arctan\frac{b}{a} , a \neq 0$
