--- a/小目标.md
+++ b/小目标.md
@@ -1,17 +1,16 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 
-
 - [Todo List](#todo-list)
-  - [工作充电](#%E5%B7%A5%E4%BD%9C%E5%85%85%E7%94%B5)
-  - [源码阅读计划](#%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB%E8%AE%A1%E5%88%92)
-  - [音乐](#%E9%9F%B3%E4%B9%90)
-  - [指弹与弹唱曲目](#%E6%8C%87%E5%BC%B9%E4%B8%8E%E5%BC%B9%E5%94%B1%E6%9B%B2%E7%9B%AE)
-  - [阅读](#%E9%98%85%E8%AF%BB)
-  - [美食复刻](#%E7%BE%8E%E9%A3%9F%E5%A4%8D%E5%88%BB)
-  - [瞎折腾](#%E7%9E%8E%E6%8A%98%E8%85%BE)
-  - [2022 年度计划](#2022-%E5%B9%B4%E5%BA%A6%E8%AE%A1%E5%88%92)
-  - [2023 年度计划](#2023-%E5%B9%B4%E5%BA%A6%E8%AE%A1%E5%88%92)
+  - [工作充电](#工作充电)
+  - [源码阅读计划](#源码阅读计划)
+  - [音乐](#音乐)
+  - [指弹与弹唱曲目](#指弹与弹唱曲目)
+  - [阅读](#阅读)
+  - [美食复刻](#美食复刻)
+  - [瞎折腾](#瞎折腾)
+  - [2022 年度计划](#2022-年度计划)
+  - [2023 年度计划](#2023-年度计划)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -88,8 +87,8 @@
 - [x] 枪炮病菌与钢铁(2021)
 - [x] 飘-上(2021)
 - [x] 飘-下(2021-07)
-- [ ] 原生家庭
-- [ ] 性格拼图
+- [x] 原生家庭
+- [x] 性格拼图
 - [x] 你当像鸟飞往你的山(2021-10)
 - [x] 社会心理学(2022-01-16 阅毕)
 - [x] 墨菲定律(2022-03-17 阅毕)
@@ -100,6 +99,8 @@
 - [ ] 遗忘的力量
 - [ ] 中国婚姻史
 - [ ] 资本论
+- [x] 傲慢与偏见
+- [ ] 罗马帝国衰亡史
 
 ## 美食复刻
 
