feat：不定积分相关内容

--- a/数学/高等数学/016.不定积分.md
+++ b/数学/高等数学/016.不定积分.md
@@ -4,6 +4,8 @@
 
 不定积分就是对导函数求原函数的过程，因为原函数求导的过程会丢失一些信息，所以不定积分的过程是不可逆的，得到的是一组原函数，而不是某一个原函数。
 
+**不定积分存在的实际意义：为定积分奠定基础，牛顿莱布尼茨公式使用了不定积分。定积分的应用就十分广泛了**
+
 $$\int{f(x)}dx$$
 
 例，求
