--- a/数学/高等数学/020.微积分基本公式.md
+++ b/数学/高等数学/020.微积分基本公式.md
@@ -5,5 +5,7 @@ $$ \phi'(x) = \frac{d}{dx} \int_{\phi(x)}^{\varphi(x)}f(t)dt = f[\varphi(x)]\var
 
 ## 牛顿莱布尼茨公式
 
+设： $F(x) = \int f(x)$
+
 <!-- prettier-ignore -->
 $$ \int_a^b{f(x)dx} = F(x)|_a^b = F(a) - F(b) $$
