feat：微积分基本公式（牛顿莱布尼茨公式、变限积分函数求导公式）

--- a/数学/高等数学/019.定积分性质.md
+++ b/数学/高等数学/019.定积分性质.md
@@ -15,3 +15,11 @@
 2、 $\left| \int_a^b{f(x)}dx \right| \leqslant \int_a^b{\left|f(x)\right|}dx$
 
 3、 设 $Max,Min$ 分别为 $f(x)$ 在 $[a,b]$ 上的最大值和最小值，则： $Min \cdot (b-a) \leqslant \int_a^b{f(x)}dx \leqslant Max \cdot (b-a)$
+
+## 定积分中值定理
+
+设 $f(x)$ 在 $[a,b]$ 上连续，且 $\int_a^b{f(x)}dx = F(b) - F(a)$
+
+则存在 $c \in [a,b]$ 使得 $f(c)(b-a) = \int_a^b{f(x)}dx$
+
+_Tips：次定理在证明变上限求导公式时为核心定理，间接证明牛顿莱布尼茨公式_
