--- a/数学/高等数学/020.微积分基本公式.md
+++ b/数学/高等数学/020.微积分基本公式.md
@@ -1,11 +1,76 @@
+## 变上限积分求导公式
+
+变上限积分函数求导公式：
+
+$$\frac{d}{dx}\int_{a}^{x} f(t) dt=f(x)$$
+
+**变上限积分求导公式间接证明牛顿莱布尼茨公式，为微积分中的核心定理。**
+
+下面是变上限积分函数求导公式的证明中的所有公式：
+
+设 $F(x) = \int_{a}^{x} f(t) dt$，其中 $f(x)$ 在区间 $[a,b]$ 上连续。
+
+$$
+\begin{aligned}
+F'(x) &= \lim_{h \to 0} \frac{F(x+h)-F(x)}{h}\\
+&= \lim_{h \to 0} \frac{\int_{a}^{x+h} f(t) dt - \int_{a}^{x} f(t) dt}{h}\\
+&= \lim_{h \to 0} \frac{ \int_{a}^{x} f(t) dt + \int_{x}^{x+h} f(t) dt - \int_{a}^{x} f(t) dt}{h} 【此处进行了定积分拆分，以消掉重复的部分】\\
+&= \lim_{h \to 0} \frac{\int_{x}^{x+h} f(t) dt}{h}\\
+&= \lim_{h \to 0} f(\xi){h} 【此处使用了定积分中值定理， \xi \in [x,x+h] 】\\
+&= f(x) 【此处使用了夹逼准则，\xi \in [x,x+h],h \to 0,因此： \xi -> x,f(\xi) \to f(x),得证 】
+\end{aligned}
+$$
+
+得证，
+
+$$ F'(x)=f(x) $$
+
+即变上限积分函数求导公式为： $\frac{d}{dx}\int_{a}^{x} f(t) dt=f(x)$，即，定积分变上限函数为被积函数的一个原函数，寄！
+
 ## 变限积分函数求导公式
+
+变限积分函数求导公式为变上限积分函数求导公式的推广，并且加入了嵌套函数，实用性更广，证明方式套用上面的变上限积分函数求导公式即可，只是需要明白，在上下限之间引入一个常数中间点，然后将两个定积分转换为变上限积分分别求导，最后相加即可。
 
 <!-- prettier-ignore -->
 $$ \phi'(x) = \frac{d}{dx} \int_{\phi(x)}^{\varphi(x)}f(t)dt = f[\varphi(x)]\varphi'(x) - f[\phi(x)]\phi'(x) $$
 
-## 牛顿莱布尼茨公式
+## 牛顿莱布尼茨公式（微积分基本定理）
+
+牛顿-莱布尼茨公式（Newton-Leibniz formula）是微积分学中的一个重要定理，它表明微分和积分是互逆运算。其公式为：
+
+前提： $f(x)$ 是一个连续可导函数
 
 设： $F(x) = \int f(x)$
 
 <!-- prettier-ignore -->
 $$ \int_a^b{f(x)dx} = F(x)|_a^b = F(a) - F(b) $$
+
+### 证明过程
+
+设 $\phi(x)=\int_{a}^{x}f(t)dt$ ， $F(x) = \int f(x)$
+
+根据变上限积分求导法则，有
+
+$$\phi'(x)=f(x)$$
+
+因此， $F(x) 与 \phi (x)$ 均为 $f(x)$ 的原函数，因此有：
+
+$$标记公式：F(x) - \phi(x)= C$$
+
+令 $x=a$，得到：
+
+$$F(a) - \phi(a)= C$$
+
+$$F(a) = C 【上一步的 \phi(a) = \int_a^a f(t) dt = 0】  $$
+
+以 将 $C = F(a)$ 带入“标记公式”得：
+
+$$F(x) - \phi(x) = F(a)$$
+
+$$ \phi(x) = F(x) - F(a)$$
+
+令 $x = b$ 得：
+
+$$ \phi(b) = F(b) - F(a) $$
+
+公式得证。
