--- a/数学/高等数学/020.微积分基本公式.md
+++ b/数学/高等数学/020.微积分基本公式.md
@@ -43,7 +43,7 @@ $$ \phi'(x) = \frac{d}{dx} \int_{\phi(x)}^{\varphi(x)}f(t)dt = f[\varphi(x)]\var
 设： $F(x) = \int f(x)$
 
 <!-- prettier-ignore -->
-$$ \int_a^b{f(x)dx} = F(x)|_a^b = F(a) - F(b) $$
+$$ \int_b^a{f(x)dx} = F(x)|_b^a = F(a) - F(b) $$
 
 ### 证明过程
 
