feat：debian11开启开机自启动脚本

--- a/后端方向/Linux/Debian/1.Debian11增加开机自启动脚本.md
+++ b/后端方向/Linux/Debian/1.Debian11增加开机自启动脚本.md
@@ -4,11 +4,11 @@
 
 ```bash
 # 服务文件配置
-echo "[Install]" >> /lib/systemd/system
-echo "WantedBy=multi-user.target"  >> /lib/systemd/system
+echo "[Install]" >> /lib/systemd/system/rc-local.service
+echo "WantedBy=multi-user.target"  >> /lib/systemd/system/rc-local.service
 
-# 创建自启动脚本
-echo "#!/bin/sh -e" >> /etc/rc.local
+# 创建自启动脚本，使用单引号包裹，双引号包裹有扩展特性，不能用
+echo -e '#!/bin/sh -e' >> /etc/rc.local
 echo -e "\n# 在这里输入需要自启的脚本" >> /etc/rc.local
 echo -e "\nexit 0" >> /etc/rc.local
 
