feat：前置机过白

--- a/后端方向/部署相关/站点保护/3.前置机过白配置.md
+++ b/后端方向/部署相关/站点保护/3.前置机过白配置.md
@@ -34,23 +34,36 @@ iptables -I FORWARD -p udp --dport $portRange -j ACCEPT
 ```shell
 #!/bin/bash
 
-# 前置机地址
-sServer=1.1.1.1
+# 前置机地址数组
+sServers=("1.1.1.1" "2.2.2.2" "3.3.3.3")
 # 中转端口范围
 portRange=50000:59999
 
 # Forward允许通过（双向的）
-iptables -I FORWARD -s $sServer -j ACCEPT
-iptables -I FORWARD -d $sServer -j ACCEPT
+for server in "${sServers[@]}"; do
+  iptables -I FORWARD -s "$server" -j ACCEPT
+  iptables -I FORWARD -d "$server" -j ACCEPT
+done
+
 # 默认策略丢弃
 iptables -P FORWARD DROP
 
 # 屏蔽ICMP request
 iptables -I INPUT -p icmp --icmp-type echo-request -j DROP
 
-# INPUT 链处理DROP规则
-iptables -I INPUT -p tcp --dport portRange ! -s $sServer -m state --state NEW -j DROP
-iptables -I INPUT -p udp --dport portRange ! -s $sServer -m state --state NEW -j DROP
+# 创建白名单链
+iptables -N whitelist
+
+# 白名单链处理RETURN规则
+for server in "${sServers[@]}"; do
+  iptables -A whitelist -s "$server" -j RETURN
+done
+iptables -A whitelist -p tcp -j DROP
+iptables -A whitelist -p udp -j DROP
+
+# 挂载白名单到INPUT链
+iptables -I INPUT -p tcp --dport $portRange -m state --state NEW -j whitelist
+iptables -I INPUT -p udp --dport $portRange -m state --state NEW -j whitelist
 ```
 
 > cron 定时任务，没 5 秒运行一次，ipt-disable-forward.sh：
