feat：前置机保护配置

--- a/后端方向/部署相关/站点保护/3.前置机过白配置.md
+++ b/后端方向/部署相关/站点保护/3.前置机过白配置.md
@@ -41,8 +41,8 @@ portRange=50000:59999
 
 # Forward允许通过（双向的）
 for server in "${sServers[@]}"; do
-  iptables -I FORWARD -s "$server" -j ACCEPT
-  iptables -I FORWARD -d "$server" -j ACCEPT
+  iptables -A FORWARD -s "$server" -j ACCEPT
+  iptables -A FORWARD -d "$server" -j ACCEPT
 done
 
 # 默认策略丢弃
