fix：过白策略修正

--- a/后端方向/部署相关/站点保护/3.前置机过白配置.md
+++ b/后端方向/部署相关/站点保护/3.前置机过白配置.md
@@ -24,7 +24,7 @@ iptables -t nat -I POSTROUTING -p udp --dport $portRange -j SNAT --to-source $sS
 
 # INPUT
 iptables -I INPUT -p tcp --dport $portRange -j ACCEPT
-iptables -I FORWARD -p udp --dport $portRange -j ACCEPT
+iptables -I INPUT -p udp --dport $portRange -j ACCEPT
 ```
 
 ## 中转机过白
