--- a/后端方向/部署相关/站点保护/3.前置机过白配置.md
+++ b/后端方向/部署相关/站点保护/3.前置机过白配置.md
@@ -106,4 +106,6 @@ iptables -t nat -L PREROUTING -nv --line-num
 iptables -t nat -L POSTROUTING -nv --line-num
 iptables -L FORWARD -nv --line-num
 iptables -L INPUT -nv --line-num
+# 查看连入IP
+conntrack -L | awk '{split($5, src_ip, "="); split($8, dst_ip, "="); print src_ip[2]}' | sort | uniq
 ```
