--- a/后端方向/Go/02.优化编译减小体积.md
+++ b/后端方向/Go/02.优化编译减小体积.md
@@ -9,6 +9,20 @@
 go build -ldflags="-s -w" ./main
 ```
 
+## 交叉编译
+
+```shell
+# 交叉编译到 linux 平台
+set GOOS=linux
+set GOARCH=amd64
+go build -o ./build/entrance-protect-manage -ldflags="-s -w" .
+
+# 交叉编译到 windows 平台
+set GOOS=windows
+set GOARCH=amd64
+go build -o ./build/entrance-protect-manage.exe -ldflags="-s -w" .
+```
+
 ## 使用 upx 加壳压缩
 
 产出可执行文件之后，可以使用 upx 进行压缩，这样可以减少可执行文件的大小，但是会稍微增加启动时间。如果开发环境是 Win，go 程序使用交叉编译进行产出的话，UPX 压缩的时候需要注意选择目标平台
