--- a/后端方向/Go/04.实现TCP&UDP转发.md
+++ b/后端方向/Go/04.实现TCP&UDP转发.md
@@ -35,7 +35,7 @@ func handleClient(clientConn net.Conn) {
 	}
 }
 
-func ForwardTCP() {
+func main() {
 	// 监听本地端口80
 	listener, err := net.Listen("tcp", "127.0.0.1:80")
 	if err != nil {
@@ -45,6 +45,94 @@ func ForwardTCP() {
 	defer listener.Close()
 
 	fmt.Println("Server started. Listening on port 80...")
+
+	for {
+		// 等待客户端连接
+		clientConn, err := listener.Accept()
+		if err != nil {
+			fmt.Println("Failed to accept connection:", err)
+			continue
+		}
+		fmt.Println("Client connected:", clientConn.RemoteAddr())
+
+		// 处理客户端连接
+		go handleClient(clientConn)
+	}
+}
+
+```
+
+## TCP 数据转发（使用缓冲区）
+
+```go
+package main
+
+import (
+	"fmt"
+	"io"
+	"net"
+)
+
+var maxMtu = 65535
+
+func handleClient(clientConn net.Conn) {
+	// 连接到目标服务器
+	serverConn, err := net.Dial("tcp", "192.168.6.210:8080")
+	if err != nil {
+		fmt.Println("Failed to connect to server:", err)
+		return
+	}
+	defer serverConn.Close()
+
+	// 在本地连接关闭时关闭服务器连接
+	defer clientConn.Close()
+
+	// 数据转发
+	go func() {
+		for {
+			clientBuffer := make([]byte, maxMtu)
+			count, err := clientConn.Read(clientBuffer)
+			if err == io.EOF {
+				fmt.Println("Tcp connection closed, client -> server.")
+				serverConn.Close()
+				return
+			}
+			if err != nil {
+				fmt.Printf("Failed to read from client : %v\n", err)
+				serverConn.Close()
+				return
+			}
+			serverConn.Write(clientBuffer[:count])
+		}
+	}()
+
+	for {
+		serverBuffer := make([]byte, maxMtu)
+		count, err := serverConn.Read(serverBuffer[:])
+		if err == io.EOF {
+			fmt.Println("Tcp connection closed, server -> client.")
+			clientConn.Close()
+			return
+		}
+		if err != nil {
+			fmt.Printf("Failed to read from server : %v\n", err)
+			clientConn.Close()
+			return
+		}
+		clientConn.Write(serverBuffer[:count])
+	}
+}
+
+func main() {
+	// 监听本地端口80
+	listener, err := net.Listen("tcp", "127.0.0.1:8080")
+	if err != nil {
+		fmt.Println("Failed to start server:", err)
+		return
+	}
+	defer listener.Close()
+
+	fmt.Println("Server started. Listening on port 8080...")
 
 	for {
 		// 等待客户端连接
