feat：端口防扫描

--- a/后端方向/部署相关/站点保护/6.防御端口扫描与并发.md
+++ b/后端方向/部署相关/站点保护/6.防御端口扫描与并发.md
@@ -1,12 +1,45 @@
 ## 端口扫描防御
 
+应用：
+
 ```shell
-# 限制并发不能超过3
-iptables -I INPUT -p tcp --dport 22 -m connlimit --connlimit-above 3 -j DROP
-# 为22端口数据包打上标记，集合标记为SSH，可自定义
-iptables -I INPUT -p tcp --dport 22 -m state --state NEW -m recent --set --name SSH
-# 检测SSH标记的数据包，如果在300秒内超过3个，就丢弃
-iptables -I INPUT -p tcp --dport 22 -m state --state NEW -m recent --update --seconds 300 --hitcount 3 --name SSH -j DROP
+#!/bin/bash
+
+# 将蜜罐端口重定向到4444端口，因为转发业务在PREROUTING链对目标端口进行了修改，此处对陷阱端口统一重定向，覆写业务配置
+iptables -t nat -I PREROUTING -p tcp -m multiport --dport 5001,10000,15000,20000,25000,30000,35000,40000,45000,49999 -j DNAT --to-destination 1.1.1.1:4444 -w
+iptables -t nat -I PREROUTING -p tcp -m multiport --dport 50000,51000,52000,53000,54000,55000,56000,57000,58000,59000 -j DNAT --to-destination 1.1.1.1:4444 -w
+iptables -t nat -I PREROUTING -p tcp -m multiport --dport 60000,61000,62000,63000,64000,65000 -j DNAT --to-destination 1.1.1.1:4444 -w
+
+# 新建端口保护链
+iptables -N port_protect -w
+# 增加蜜罐陷阱端口，为陷阱端口增加计数器
+iptables -A port_protect -p tcp -m multiport --dports 4444 -m recent --rsource --set --name PORT_PROTECT -w
+# 命中陷阱端口的来源IP，非22目标端口拉黑半个小时
+iptables -A port_protect -p tcp ! --dport 22 -m recent --rsource --update --seconds 1800 --hitcount 1 --name PORT_PROTECT -j REJECT --reject-with tcp-reset -w
+
+# 应用到INPUT、FORWARD链
+iptables -I INPUT -j port_protect -w
+iptables -A FORWARD -j port_protect -w
+
+```
+
+移除：
+
+```shell
+#!/bin/bash
+
+# 清理PREROUTING重定向规则
+iptables -t nat -D PREROUTING -p tcp -m multiport --dport 5001,10000,15000,20000,25000,30000,35000,40000,45000,49999 -j DNAT --to-destination 1.1.1.1:4444 -w
+iptables -t nat -D PREROUTING -p tcp -m multiport --dport 50000,51000,52000,53000,54000,55000,56000,57000,58000,59000 -j DNAT --to-destination 1.1.1.1:4444 -w
+iptables -t nat -D PREROUTING -p tcp -m multiport --dport 60000,61000,62000,63000,64000,65000 -j DNAT --to-destination 1.1.1.1:4444 -w
+
+# 应用到INPUT、FORWARD链
+iptables -D INPUT -j port_protect -w
+iptables -D FORWARD -j port_protect -w
+
+# 删除端口保护链
+iptables -F port_protect -w
+iptables -X port_protect -w
 ```
 
 ## 端口敲门
@@ -21,39 +54,4 @@ iptables -A INPUT -p icmp --icmp-type 8 -m length --length 128 -m recent --set -
 iptables -A INPUT -p icmp --icmp-type 8 -j ACCEPT
 # 检测SSHOPEN标记的数据包，如果在15秒内有新的数据包，就放行
 iptables -A INPUT -p tcp --dport 22 -m state --state NEW -m recent --rcheck --seconds 15 --name SSHOPEN --rsource -j ACCEPT
-```
-
-```shell
-#!/bin/bash
-
-iptables -N port_scan_block
-
-
-# 允许已建立的连接及相关的数据包通过
-iptables -A port_scan_block -m conntrack --ctstate RELATED,ESTABLISHED -j RETURN
-
-# 使用hashlimit模块限制每分钟TCP SYN连接数为360个
-iptables -A port_scan_block -p tcp --syn -m hashlimit --hashlimit-above 360/minute --hashlimit-mode srcip --hashlimit-name synlimit -m recent --set -j RETURN
-
-# 使用recent模块检查是否已经加入黑名单
-iptables -A INPUT -m recent --name synlimit --rcheck --seconds 300 -j DROP
-
-# 如果未加入黑名单，则将IP加入黑名单两小时
-iptables -A INPUT -m recent --name synlimit --set -j ACCEPT
-
-# 其他未匹配规则的数据包拒绝
-iptables -A INPUT -j DROP
-
-# ============================================
-iptables -N port_protect
-# 为新连接打上标记
-iptables -A port_protect -p tcp -m multiport --dports 5001,10000,15000,20000,25000,30000,35000,40000,45000,49999,60000,61000,62000,63000,64000,65000 -m state --state NEW -m recent --set --name PORT_PROTECT
-# 半个小时内
-iptables -A port_protect -p tcp --dport 10:65535 -m state --state NEW -m recent --update --seconds 1800 --hitcount 1 --name PORT_PROTECT -j DROP
-
-iptables -I INPUT -j port_protect
-iptables -I FORWARD -j port_protect
-
-# sysctl net.netfilter.nf_conntrack_max
-
 ```
