feat：端口扫描防御

--- a/后端方向/部署相关/站点保护/6.防御端口扫描与并发.md
+++ b/后端方向/部署相关/站点保护/6.防御端口扫描与并发.md
@@ -16,6 +16,8 @@ iptables -N port_protect -w
 iptables -A port_protect -p tcp -m multiport --dports 4444 -m recent --rsource --set --name PORT_PROTECT -w
 # 命中陷阱端口的来源IP，非22目标端口拉黑半个小时
 iptables -A port_protect -p tcp ! --dport 22 -m recent --rsource --update --seconds 1800 --hitcount 1 --name PORT_PROTECT -j REJECT --reject-with tcp-reset -w
+iptables -A port_protect -p tcp --dport 5000:6000 -m recent --rsource --update --seconds 1800 --hitcount 1 --name PORT_PROTECT -j REJECT --reject-with tcp-reset -w
+iptables -A port_protect -p tcp -m multiport --dports 443,80,5000:6000 -m recent --rsource --update --seconds 1800 --hitcount 1 --name PORT_PROTECT -j REJECT --reject-with tcp-reset -w
 
 # 应用到INPUT、FORWARD链
 iptables -I INPUT -j port_protect -w
