--- a/小目标.md
+++ b/小目标.md
@@ -3,14 +3,10 @@
 
 - [Todo List](#todo-list)
   - [工作充电](#工作充电)
-  - [源码阅读计划](#源码阅读计划)
   - [音乐](#音乐)
   - [指弹与弹唱曲目](#指弹与弹唱曲目)
   - [阅读](#阅读)
-  - [美食复刻](#美食复刻)
   - [瞎折腾](#瞎折腾)
-  - [2022 年度计划](#2022-年度计划)
-  - [2023 年度计划](#2023-年度计划)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -51,12 +47,6 @@
 - [ ] HLSL 语言简要学习
 - [ ] TypeScript 系统性学习
 
-## 源码阅读计划
-
-- [ ] React
-- [ ] Systemjs
-- [ ] requirejs
-
 ## 音乐
 
 - [x] 基础乐理
@@ -92,7 +82,7 @@
 - [x] 你当像鸟飞往你的山(2021-10)
 - [x] 社会心理学(2022-01-16 阅毕)
 - [x] 墨菲定律(2022-03-17 阅毕)
-- [ ] 梦的解析
+- [x] 梦的解析
 - [x] 自卑与超越(2021-08)
 - [ ] 且听风吟
 - [ ] 简爱
@@ -102,15 +92,6 @@
 - [x] 傲慢与偏见
 - [ ] 罗马帝国衰亡史
 
-## 美食复刻
-
-- [x] 干锅土豆片
-- [ ] 卤肥肠
-- [ ] 干煸肥肠
-- [ ] 葱肠
-- [ ] 肉夹馍
-- [ ] 口水鸡
-
 ## 瞎折腾
 
 - [x] 配置实现软路由相关功能
@@ -119,18 +100,3 @@
 - [x] 树莓派开发板学习
 - [ ] 极客时间（摄影入门课）
 - [x] 一个人工智能的诞生学习
-
-## 2022 年度计划
-
-- [x] 阅读张鑫旭 CSS 三部曲(3/3)(主线 S-1)(2022-07-01 完成)
-- [ ] 重学 React 基础及底层实现(主线 S-2)
-- [ ] 《SVG 精髓（第 2 版）》(支线 A-1)
-- [ ] 张力涛 AI 视频课(支线 A-2)
-- [ ] 掌握 Vue3 新的写法与基础(支线 B-1)
-- [ ] 中间件 Caddy 的基础学习与使用(支线 C-1)
-
-## 2023 年度计划
-
-- [ ] 宋浩高等数学视频课(主线 S-1)
-- [ ] 重学 React 基础及底层实现(主线 S-2)
-- [ ] 极客时间可视化课程(支线 A-1)
