--- a/后端方向/部署相关/站点保护/3.前置机过白配置.md
+++ b/后端方向/部署相关/站点保护/3.前置机过白配置.md
@@ -1,10 +1,8 @@
 ## 开启数据转发
 
-编辑文件：/etc/sysctl.conf
-
-添加：net.ipv4.ip_forward = 1
-
-应用：sysctl -p /etc/sysctl.conf
+```shell
+echo "net.ipv4.ip_forward = 1" >> /etc/sysctl.conf && sysctl -p /etc/sysctl.conf
+```
 
 ## 前置机配置
 
