--- a/后端方向/Linux/Debian/1.Debian11增加开机自启动脚本.md
+++ b/后端方向/Linux/Debian/1.Debian11增加开机自启动脚本.md
@@ -20,3 +20,22 @@ sudo systemctl enable rc-local  # 启用
 sudo systemctl start rc-local.service # 开始运行
 sudo systemctl status rc-local.service  # 查看状态
 ```
+
+### 脚本
+
+```bash
+echo "[Install]" >> /lib/systemd/system/rc-local.service
+echo "WantedBy=multi-user.target"  >> /lib/systemd/system/rc-local.service
+
+
+echo -e '#!/bin/sh -e' >> /etc/rc.local
+echo -e "\n# 在这里输入需要自启的脚本" >> /etc/rc.local
+echo -e "\nexit 0" >> /etc/rc.local
+
+chmod +x /etc/rc.local
+
+systemctl enable rc-local
+systemctl start rc-local.service
+
+echo "处理完成，请将自启动脚本添加至：/etc/rc.local 中，并赋予执行权限"
+```
