feat：前置机过白配置修改

--- a/后端方向/部署相关/站点保护/3.前置机过白配置.md
+++ b/后端方向/部署相关/站点保护/3.前置机过白配置.md
@@ -37,11 +37,13 @@ iptables -I INPUT -p udp --dport $portRange -j ACCEPT
 
 > 开机自动运行一次，ipt-init.sh：
 
+启用保护：
+
 ```shell
 #!/bin/bash
 
 # 前置机地址数组
-sServers=("1.1.1.1" "2.2.2.2" "3.3.3.3")
+sServers=("1.1.1.1")
 # 中转端口范围
 portRange=50000:59999
 
@@ -52,7 +54,7 @@ for server in "${sServers[@]}"; do
 done
 
 # 默认策略丢弃
-iptables -P FORWARD DROP
+iptables -A FORWARD -j DROP
 
 # 屏蔽ICMP request
 iptables -I INPUT -p icmp --icmp-type echo-request -j DROP
@@ -70,6 +72,39 @@ iptables -A whitelist -p udp -j DROP
 # 挂载白名单到INPUT链
 iptables -I INPUT -p tcp --dport $portRange -m state --state NEW -j whitelist
 iptables -I INPUT -p udp --dport $portRange -m state --state NEW -j whitelist
+~
+
+```
+
+停用保护：
+
+```shell
+#!/bin/bash
+
+# 前置机地址数组
+sServers=("1.1.1.1")
+# 中转端口范围
+portRange=50000:59999
+
+# Forward允许通过（双向的）
+for server in "${sServers[@]}"; do
+  iptables -D FORWARD -s "$server" -j ACCEPT
+  iptables -D FORWARD -d "$server" -j ACCEPT
+done
+
+# 默认FORWARD策略丢弃
+iptables -D FORWARD -j DROP
+
+# 屏蔽ICMP request
+iptables -D INPUT -p icmp --icmp-type echo-request -j DROP
+
+# 挂载白名单到INPUT链
+iptables -D INPUT -p tcp --dport $portRange -m state --state NEW -j whitelist
+iptables -D INPUT -p udp --dport $portRange -m state --state NEW -j whitelist
+
+# 删除白名单链
+iptables -F whitelist
+iptables -X whitelist
 ```
 
 > cron 定时任务，没 5 秒运行一次，ipt-disable-forward.sh：
